--- a/.github/workflows/build_on_push.yml
+++ b/.github/workflows/build_on_push.yml
@@ -23,6 +23,8 @@ jobs:
                   key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
                   restore-keys: |
                       ${{ runner.os }}-node-
+            - name: Install PNPM
+              run: npm i -g pnpm
             - name: Install Packages
               run: pnpm i
             - name: Build Static
