--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "scripts": {
         "dev": "svelte-kit dev --open",
-        "build": "node scripts/env_check && svelte-kit build",
+        "build": "node scripts/env_check && svelte-kit build --verbose",
         "package": "svelte-kit package",
         "preview": "svelte-kit preview",
         "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -33,12 +33,12 @@
         "markdown-it": "^12.2.0",
         "markdown-it-anchor": "^8.4.1",
         "markdown-it-katex": "^2.0.3",
-        "markdown-it-shiki": "^0.3.0",
         "markdown-it-texmath": "^0.9.6",
         "postcss": "^8.3.9",
         "postcss-load-config": "^3.1.0",
         "prettier": "^2.4.1",
         "prettier-plugin-svelte": "^2.4.0",
+        "shiki": "^0.9.14",
         "svelte": "^3.44.0",
         "svelte-check": "^2.2.6",
         "svelte-preprocess": "^4.9.8",
@@ -48,6 +48,7 @@
     },
     "type": "module",
     "dependencies": {
+        "fuse.js": "^6.4.6",
         "path": "^0.12.7"
     }
 }
